--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,27 +1,44 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
+  
 }
 
 .title {
   background: #e3f4ff;
+  margin:0px;
+  font-size: 16px;
+  display: block;
+  padding: 8px;
+ 
 }
 
 .content {
   background: #e3f4ff;
+  margin-top: 8px;
+  
+  padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin:8px 0px 0px;
+  text-align: center;
+  padding: 8px ;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+ margin: 0px auto;
+  padding: 8px 24px;
 }
