--- a/flex/02-flex-header/solution/solution.css
+++ b/flex/02-flex-header/solution/solution.css
@@ -32,10 +32,10 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-
+/**/
 ul {
   display: flex;
   margin: 0;
-  padding: 0;
-  gap: 8px;
+  padding: 0; 
+  gap: 8px;  
 }
