ex 04- DONE. me quedó igual, tenia diferencias de pixeles entre el index y el solution, lo que lo arregló fue que había puesto en este caso un 'container' de más con el display flex y no era necesario. Verificar despues con el ex 03

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,7 +11,35 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  
 }
+
+.above{
+display: flex;
+justify-content: center;
+margin-bottom: 32px;
+}
+
+.below{
+  display: flex;
+  flex-direction: row;
+  gap: 52px;
+  justify-content: center;
+  
+}
+
+.container{
+ 
+  max-width: 200px;
+
+  
+}
+
+.text{
+  display: flex;
+  text-align: center;
+}
+
 
 /* do not edit this footer */
 .footer {
