--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+ 
 }
 
 .modal {
@@ -20,6 +21,12 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  
+  
+
+  display: flex;
+  padding: 16px;
+  gap:16px;  
 }
 
 .icon {
@@ -33,6 +40,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0
+ 
 }
 
 .close-button {
@@ -46,6 +55,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 button {
@@ -64,3 +74,17 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.header{
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+.text{
+  margin-bottom: 16px;
+}
+
