--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -25,3 +28,56 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+
+
+.header{
+display: flex;
+justify-content: space-between;
+padding: 16px;
+
+}
+
+.left-links{
+list-style-type: none;
+display: flex;
+gap: 16px;
+padding: 0px;;
+margin: 0px;
+
+
+}
+
+.right-links{
+list-style-type: none;
+display: flex;
+gap: 16px;
+padding: 0px;
+margin: 0px;
+
+}
+a{
+
+color: #666;
+text-decoration: none;
+}
+
+.content{
+ 
+flex: 1;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+
+
+}
+
+
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  background-color: #eee;
+  margin: 0px;
+  }
